--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "jszip": "^3.6.0",
     "mathjs": "^9.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
