--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "jszip": "^3.6.0",
     "mathjs": "^9.3.2",
+    "plotly.js": "^1.58.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -46,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "@types/mathjs": "^6.0.12",
+    "@types/react-plotly.js": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^9",
